--- a/html/signup.html
+++ b/html/signup.html
@@ -8,6 +8,7 @@
       Online Shopping for Women, Men, Kids Fashion & Lifestyle - Myntra
     </title>
     <link rel="stylesheet" href="../styles/common.css" />
+    <link rel="stylesheet" href="../styles/signup.css" />
 
     <!-- myntra-logo-title-bar -->
     <link
@@ -74,6 +75,35 @@
           </div>
         </div>
       </div>
+      <div class="login">
+      <div class="login-card">
+        <div class="welcome">
+          Complete your Sign up
+        </div>
+        <form id="form">
+          <div id="enter-no">
+            <div>+91 |</div>
+            <input type="text" id="num" placeholder="Mobile Number" />
+          </div>
+          <input type="password" id="pass" placeholder="Create Password*" />
+
+          <input type="text" id="name" placeholder="Full Name"/>
+
+          <input type="email" id="email" placeholder="Email (Optional)"/>
+
+          <div id="enter-no">
+            <div>+91 |</div>
+            <input type="text" id="num2" placeholder="Alternate Mobile Number" />
+          </div>
+          <p id="trouble">
+            This will help recover your account if needed
+          </p>
+
+          <input type="submit" value="CREATE ACCOUNT" class="continue"
+        </div>
+      </div>
     </div>
 </body>
 </html>
+
+<script src="../script/signup.js"></script>
