--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="category">
           <ul>
-            <li class="men"><a href="#">men</a></li>
+            <li class="men"><a href="./html/mens.html">men</a></li>
             <li class="women"><a href="">women</a></li>
             <li class="kids"><a href="">kids</a></li>
             <li class="hnl"><a href="">home & living</a></li>
@@ -62,7 +62,7 @@
         <div class="profile-wishlist-bag">
           <div>
             <span class="material-symbols-outlined"> person </span>
-            <div>Profile</div>
+            <div><a href="./html/login.html" class="profile-login">Profile</a></div>
           </div>
           <div>
             <span class="material-symbols-outlined"> favorite </span>
@@ -74,6 +74,23 @@
           </div>
         </div>
       </div>
+
+
+<!-- 
+      <div class="dropdown">
+        <button class="mainmenubtn">Main Menu</button>
+        <div class="dropdown-child">
+          <a href="http://wwww.yourdomain.com/page1.html">Sub-Menu 1</a>
+          <a href="http://wwww.yourdomain.com/page2.html">Sub-Menu 2</a>
+          <a href="http://wwww.yourdomain.com/page3.html">Sub-Menu 3</a>
+          <a href="http://wwww.yourdomain.com/page4.html">Sub-Menu 4</a>
+          <a href="http://wwww.yourdomain.com/page5.html">Sub-Menu 5</a>
+        </div>
+      </div> -->
+
+
+
+
 
       <div class="banner">
         <img
@@ -480,7 +497,7 @@
       <footer class="footer">
         <div class="container">
           <div class="row">
-            <div class="footer-col">
+            <div class="columns">
               <h4>online shopping</h4>
               <ul>
                 <li><a href="#">men</a></li>
@@ -494,7 +511,7 @@
                 </li>
               </ul>
             </div>
-            <div class="footer-col">
+            <div class="columns">
               <h4>useful links</h4>
               <ul>
                 <li><a href="#">FAQ</a></li>
@@ -512,7 +529,7 @@
               </ul>
             </div>
 
-            <div class="footer-col">
+            <div class="columns">
               <h4>experience myntra app on mobile</h4>
               <div>
               <a href=""
@@ -527,7 +544,7 @@
               /></a>
             </div>
               <h4>keep in touch</h4>
-              <div class="social-links">
+              <div class="facebook">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
@@ -535,26 +552,26 @@
               </div>
             </div>
 
-            <div class="footer-col">
-              <div class="footer-promise">
+            <div class="columns">
+              <div class="original">
                 <img
                   src="https://constant.myntassets.com/web/assets/img/6c3306ca-1efa-4a27-8769-3b69d16948741574602902452-original.png"
                   alt=""
                 />
                 <div>
-                  <strong>100% ORIGINAL</strong>
+                  <p>100% ORIGINAL</p>
 
                   <span>guarantee for all products at myntra.com</span>
                 </div>
               </div>
 
-              <div class="footer-promise">
+              <div class="original">
                 <img
                   src="https://constant.myntassets.com/web/assets/img/ef05d6ec-950a-4d01-bbfa-e8e5af80ffe31574602902427-30days.png"
                   alt=""
                 />
                 <div>
-                  <strong>Return within 30days</strong>
+                  <p>Return within 30days</p>
                   <span>of receiving your order</span>
                 </div>
               </div>
