--- a/html/login.html
+++ b/html/login.html
@@ -40,9 +40,9 @@
         </div>
         <div class="category">
           <ul>
-            <li class="men"><a href="#">men</a></li>
+            <li class="men"><a href="../html/mens.html">men</a></li>
             <li class="women"><a href="">women</a></li>
-            <li class="kids"><a href="">kids</a></li>
+            <li class="kids"><a href="../html/product2.html">kids</a></li>
             <li class="hnl"><a href="">home & living</a></li>
             <li class="beauty"><a href="">beauty</a></li>
             <li class="studio">
@@ -61,7 +61,7 @@
         <div class="profile-wishlist-bag">
           <div>
             <span class="material-symbols-outlined"> person </span>
-            <div>Profile</div>
+            <div>Login</div>
           </div>
           <div>
             <span class="material-symbols-outlined"> favorite </span>
@@ -69,7 +69,7 @@
           </div>
           <div>
             <span class="material-symbols-outlined"> shopping_bag </span>
-            <div>Bag</div>
+            <div><a href="../html/bag.html"> Bag </a></div>
           </div>
         </div>
       </div>
