--- a/html/mens.html
+++ b/html/mens.html
@@ -41,7 +41,7 @@
             <ul>
               <li class="men"><a href="../html/mens.html">men</a></li>
               <li class="women"><a href="">women</a></li>
-              <li class="kids"><a href="">kids</a></li>
+              <li class="kids"><a href="../html/product2.html">kids</a></li>
               <li class="hnl"><a href="">home & living</a></li>
               <li class="beauty"><a href="">beauty</a></li>
               <li class="studio">
@@ -60,7 +60,7 @@
           <div class="profile-wishlist-bag">
             <div>
               <span class="material-symbols-outlined"> person </span>
-              <div><a href="../html/login.html" class="profile-login">Profile</a></div>
+              <div><a href="../html/login.html" class="profile-login">Login</a></div>
             </div>
             <div>
               <span class="material-symbols-outlined"> favorite </span>
@@ -68,7 +68,7 @@
             </div>
             <div>
               <span class="material-symbols-outlined"> shopping_bag </span>
-              <div>Bag</div>
+              <div><a href="../html/bag.html"> Bag </a></div>
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
             class="banners"
           />
             <img src="https://assets.myntassets.com/f_webp,w_980,c_limit,fl_progressive,dpr_2.0/assets/images/2022/4/17/eb6408d8-b413-49f7-8525-317fddba53821650180659351-Casual---Sports-Shoes_Desk.jpg" alt=""
-            class="banners">
+            class="banners"/>
         </a>
         </div>
   
@@ -111,7 +111,7 @@
       
         <div class="deals-top-brands-mens">
             <h4 class="titles">Biggest Deals on top brands</h4>
-            <div>
+            <div><a href="../html/product2.html">
               <img
                 src="https://assets.myntassets.com/f_webp,w_122,c_limit,fl_progressive,dpr_2.0/assets/images/retaillabs/2020/9/3/f0dc0024-a8d3-4aec-9e1b-d9b6873b52d51599144996663-Crocs.jpg"
                 alt=""
@@ -138,7 +138,7 @@
                 src="https://assets.myntassets.com/f_webp,w_122,c_limit,fl_progressive,dpr_2.0/assets/images/2020/8/26/d1fab403-7742-4a91-a781-2e36bea65a8a1598445950683-Men-s-Apparel---Roadster.png"
                 alt=""
               />
-             
+            </a>
             </div>
           </div>
 
