--- a/html/signup.html
+++ b/html/signup.html
@@ -44,7 +44,7 @@
           <ul>
             <li class="men"><a href="#">men</a></li>
             <li class="women"><a href="">women</a></li>
-            <li class="kids"><a href="">kids</a></li>
+            <li class="kids"><a href="../html/product2.html">kids</a></li>
             <li class="hnl"><a href="">home & living</a></li>
             <li class="beauty"><a href="">beauty</a></li>
             <li class="studio">
@@ -63,7 +63,7 @@
         <div class="profile-wishlist-bag">
           <div>
             <span class="material-symbols-outlined"> person </span>
-            <div>Profile</div>
+            <div>Login</div>
           </div>
           <div>
             <span class="material-symbols-outlined"> favorite </span>
@@ -71,7 +71,7 @@
           </div>
           <div>
             <span class="material-symbols-outlined"> shopping_bag </span>
-            <div>Bag</div>
+            <div><a href="../html/bag.html"> Bag </a></div>
           </div>
         </div>
       </div>
