--- a/html/payment.html
+++ b/html/payment.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Online Shopping for Women, Men, Kids Fashion & Lifestyle - Myntra
+      Men Shopping Online - Buy from Latest Collections of Shirts and Accesories
     </title>
-    <link rel="stylesheet" href="../styles/common.css" />
-
-    <!-- myntra-logo-title-bar -->
     <link
       rel="icon"
       href="https://cdn.iconscout.com/icon/free/png-256/myntra-2709168-2249158.png"
       type="image/x-icon"
     />
+
+    <link rel="stylesheet" href="../styles/common.css" />
+    <link rel="stylesheet" href="../styles/payment.css" />
 
     <!-- fontawesome-link -->
     <script
@@ -30,57 +30,71 @@
   </head>
   <body>
     <div class="container">
-      <div class="navbar">
-        <div class="logo">
-          <a href="../index.html"
-            ><img
-              src="https://cdn.iconscout.com/icon/free/png-256/myntra-2709168-2249158.png"
-              alt="logo"
-              id="myntra-logo"
-          /></a>
-        </div>
-        <div class="category">
-          <ul>
-            <li class="men"><a href="../html/mens.html">men</a></li>
-            <li class="women"><a href="">women</a></li>
-            <li class="kids"><a href="">kids</a></li>
-            <li class="hnl"><a href="">home & living</a></li>
-            <li class="beauty"><a href="">beauty</a></li>
-            <li class="studio">
-              <a href="">studio <sup>new</sup></a>
-            </li>
-          </ul>
-        </div>
-        <div class="search-bar">
-          <i class="fa-solid fa-magnifying-glass"></i>
-          <input
-            type="text"
-            id="search"
-            placeholder="Search for products, brands and more"
-          />
-        </div>
-        <div class="profile-wishlist-bag">
-          <div>
-            <span class="material-symbols-outlined"> person </span>
-            <div><a href="../html/login.html" class="profile-login">Login</a></div>
+        <div class="navbar">
+            <div class="logo">
+              <a href="../index.html"
+                ><img
+                  src="https://cdn.iconscout.com/icon/free/png-256/myntra-2709168-2249158.png"
+                  alt="logo"
+                  id="myntra-logo"
+              /></a>
+            </div>
+            <div class="category">
+              <ul>
+                <li class="men"><a href="../html/mens.html">men</a></li>
+                <li class="women"><a href="">women</a></li>
+                <li class="kids"><a href="../html/product2.html">kids</a></li>
+                <li class="hnl"><a href="">home & living</a></li>
+                <li class="beauty"><a href="">beauty</a></li>
+                <li class="studio">
+                  <a href="">studio <sup>new</sup></a>
+                </li>
+              </ul>
+            </div>
+            <div class="search-bar">
+              <i class="fa-solid fa-magnifying-glass"></i>
+              <input
+                type="text"
+                id="search"
+                placeholder="Search for products, brands and more"
+              />
+            </div>
+            <div class="profile-wishlist-bag">
+              <div>
+                <span class="material-symbols-outlined"> person </span>
+                <div>
+                  <a href="../html/login.html" class="profile-login">Login</a>
+                </div>
+              </div>
+              <div>
+                <span class="material-symbols-outlined"> favorite </span>
+                <div>Wishlist</div>
+              </div>
+              <div>
+                <span class="material-symbols-outlined"> shopping_bag </span>
+                <div><a href="../html/bag.html"> Bag </a></div>
+              </div>
+            </div>
           </div>
-          <div>
-            <span class="material-symbols-outlined"> favorite </span>
-            <div>Wishlist</div>
-          </div>
-          <div>
-            <span class="material-symbols-outlined"> shopping_bag </span>
-            <div><a href="../html/bag.html"> Bag </a></div>
-          </div>
-        </div>
-      </div>
+    
+        <div class="main">
+            <div class="header">
+            <h1 >Enter Your Card Details</h1>
+            <h2 ></h2>
+            </div>
+            <div id="form-container">
+                <form id="form">
+                    <input type="text" id="cardName" placeholder="Enter The Name On The Card">
+                    <input type="number" id="cardNumber" placeholder="Enter The Card Number">
+                    <input type="date" id="date" placeholder="Enter The Expiry te">
+                    <input type="password" id="cvv" placeholder="Enter The CVV">
+                    <input type="submit" value="Pay" id="pay">
+                </form>
+            </div>
+            </div>
 
 
-
-
-
-
-      <div class="foot">   
+      <div class="foot">
         <footer class="footer">
           <div class="container">
             <div class="row">
@@ -115,21 +129,21 @@
                   <li><a href="#">Cancellation</a></li>
                 </ul>
               </div>
-  
+
               <div class="columns">
                 <h4>experience myntra app on mobile</h4>
                 <div>
-                <a href=""
-                  ><img
-                    src="https://constant.myntassets.com/web/assets/img/80cc455a-92d2-4b5c-a038-7da0d92af33f1539674178924-google_play.png"
-                    alt=""
-                /></a>
-                <a href=""
-                  ><img
-                    src="https://constant.myntassets.com/web/assets/img/bc5e11ad-0250-420a-ac71-115a57ca35d51539674178941-apple_store.png"
-                    alt=""
-                /></a>
-              </div>
+                  <a href=""
+                    ><img
+                      src="https://constant.myntassets.com/web/assets/img/80cc455a-92d2-4b5c-a038-7da0d92af33f1539674178924-google_play.png"
+                      alt=""
+                  /></a>
+                  <a href=""
+                    ><img
+                      src="https://constant.myntassets.com/web/assets/img/bc5e11ad-0250-420a-ac71-115a57ca35d51539674178941-apple_store.png"
+                      alt=""
+                  /></a>
+                </div>
                 <h4>keep in touch</h4>
                 <div class="facebook">
                   <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -138,7 +152,7 @@
                   <a href="#"><i class="fab fa-youtube"></i></a>
                 </div>
               </div>
-  
+
               <div class="columns">
                 <div class="original">
                   <img
@@ -147,11 +161,11 @@
                   />
                   <div>
                     <p>100% ORIGINAL</p>
-  
+
                     <span>guarantee for all products at myntra.com</span>
                   </div>
                 </div>
-  
+
                 <div class="original">
                   <img
                     src="https://constant.myntassets.com/web/assets/img/ef05d6ec-950a-4d01-bbfa-e8e5af80ffe31574602902427-30days.png"
@@ -167,6 +181,7 @@
           </div>
         </footer>
       </div>
-      </div>
-    </body>
-  </html>
+    </div>
+  </body>
+</html>
+<script src="../script/payment.js"></script>
