--- a/html/products.html
+++ b/html/products.html
@@ -43,7 +43,7 @@
           <ul>
             <li class="men"><a href="../html/mens.html">men</a></li>
             <li class="women"><a href="">women</a></li>
-            <li class="kids"><a href="">kids</a></li>
+            <li class="kids"><a href="../html/product2.html">kids</a></li>
             <li class="hnl"><a href="">home & living</a></li>
             <li class="beauty"><a href="">beauty</a></li>
             <li class="studio">
@@ -63,7 +63,7 @@
           <div>
             <span class="material-symbols-outlined"> person </span>
             <div>
-              <a href="../html/login.html" class="profile-login">Profile</a>
+              <a href="../html/login.html" class="profile-login">Login</a>
             </div>
           </div>
           <div>
@@ -72,7 +72,7 @@
           </div>
           <div>
             <span class="material-symbols-outlined"> shopping_bag </span>
-            <div>Bag</div>
+            <div><a href="../html/bag.html"> Bag </a></div>
           </div>
         </div>
       </div>
