--- a/html/bag.html
+++ b/html/bag.html
@@ -78,9 +78,11 @@
         </div>
       </div>
 
+
       
-        <!-- <p class="showtotal"></p> -->
+        
       <div class="addedtocart"></div>
+      <div class="showtotal"></div>
       <input type="submit" id="proceed" value="Proceed to Checkout">
       <div class="foot">
         <footer class="footer">
