sorting feature and address added

--- a/html/mens.html
+++ b/html/mens.html
@@ -40,7 +40,7 @@
           <div class="category">
             <ul>
               <li class="men"><a href="../html/mens.html">men</a></li>
-              <li class="women"><a href="">women</a></li>
+              <li class="women"><a href="../html/women.html">women</a></li>
               <li class="kids"><a href="../html/product2.html">kids</a></li>
               <li class="hnl"><a href="">home & living</a></li>
               <li class="beauty"><a href="">beauty</a></li>
@@ -111,7 +111,7 @@
       
         <div class="deals-top-brands-mens">
             <h4 class="titles">Biggest Deals on top brands</h4>
-            <div><a href="../html/product2.html">
+            <div><a href="../html/products.html">
               <img
                 src="https://assets.myntassets.com/f_webp,w_122,c_limit,fl_progressive,dpr_2.0/assets/images/retaillabs/2020/9/3/f0dc0024-a8d3-4aec-9e1b-d9b6873b52d51599144996663-Crocs.jpg"
                 alt=""
