--- a/html/product2.html
+++ b/html/product2.html
@@ -42,7 +42,7 @@
         <div class="category">
           <ul>
             <li class="men"><a href="../html/mens.html">men</a></li>
-            <li class="women"><a href="">women</a></li>
+            <li class="women"><a href="../html/women.html">women</a></li>
             <li class="kids"><a href="../html/product2.html">kids</a></li>
             <li class="hnl"><a href="">home & living</a></li>
             <li class="beauty"><a href="">beauty</a></li>
@@ -85,7 +85,7 @@
       </div>
       <div class="right">
         <div class="sort">
-          <select name="type" id="type">
+          <select name="type" id="type" onchange="handleSort()">
             <option selected>Sort By: Recommended</option>
             <option value="1">Price : High to Low</option>
             <option value="2">Price : Low to High</option>
