--- a/html/payment.html
+++ b/html/payment.html
@@ -42,7 +42,7 @@
             <div class="category">
               <ul>
                 <li class="men"><a href="../html/mens.html">men</a></li>
-                <li class="women"><a href="">women</a></li>
+                <li class="women"><a href="../html/women.html">women</a></li>
                 <li class="kids"><a href="../html/product2.html">kids</a></li>
                 <li class="hnl"><a href="">home & living</a></li>
                 <li class="beauty"><a href="">beauty</a></li>
